Bug 246029 - Filebrowser window grows in size while expanding directories
Summary: Filebrowser window grows in size while expanding directories
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: 2.6-git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
: 252074 253712 254949 256439 263311 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-28 15:17 UTC by Michael Seiwert
Modified: 2013-01-02 16:23 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
Navigationbar in Filebrowser changing the size of the left panel (97.76 KB, image/png)
2011-06-04 15:44 UTC, Philipp Schmidt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Seiwert 2010-07-28 15:17:45 UTC
Version:           2.3-GIT (using KDE 4.4.95) 
OS:                Linux

The filebrowser grows in size if you browse through a directory hierarchy.

Reproducible: Always

Steps to Reproduce:
Steps to reproduce:

1. Switch to Filebrowser
2. Expand some directories
-

Actual Results:  
-> Filebrowser window grows in size
-> Context View/Playlist Window shrinks

Expected Results:  
Filebrowser should not change in size while expanding directories

OS: Linux (i686) release 2.6.34-12-desktop
Compiler: gcc
Comment 1 Kevin Funk 2010-07-28 15:23:35 UTC
Nikolaj?
Comment 2 Myriam Schweingruber 2010-07-28 19:40:30 UTC
*** Bug 246062 has been marked as a duplicate of this bug. ***
Comment 3 Mark Kretschmann 2010-08-26 09:23:25 UTC
Yeah, I can reproduce this here. Bug is valid.
Comment 4 Myriam Schweingruber 2010-09-23 16:09:54 UTC
*** Bug 252074 has been marked as a duplicate of this bug. ***
Comment 5 Myriam Schweingruber 2010-10-10 15:52:19 UTC
*** Bug 253712 has been marked as a duplicate of this bug. ***
Comment 6 Myriam Schweingruber 2010-10-22 15:45:31 UTC
*** Bug 254949 has been marked as a duplicate of this bug. ***
Comment 7 Myriam Schweingruber 2010-11-09 14:06:31 UTC
*** Bug 256439 has been marked as a duplicate of this bug. ***
Comment 8 Ognyan Angelov 2010-12-02 22:56:34 UTC
Setup:
  Amarok 2.3.2
  KDE 4.4.5
Test Result:
  It do occurs on 2.3.2 but only if the names of the last 3 folders are larger then the space in the dir bar...
Comment 9 Myriam Schweingruber 2010-12-03 00:38:03 UTC
Updating version.
Comment 10 Kevin Funk 2011-01-16 13:56:14 UTC
*** Bug 263311 has been marked as a duplicate of this bug. ***
Comment 11 Janet 2011-03-05 15:19:36 UTC
Please update version to 2.4, the bug is still present. 

The pane width should never change on its own, only by user interaction. A pane width set by the user should always under all circumstances be kept (and when the window size is changed by the user the pane width ratio should be kept).

I switched off all details like date, owner etc and kept only the file/folder name, but that doesn't change anything.

I use a two pane layout: right pane is the playlist with two thirds of the window width, left pane is the collection/file browser in one tab and the context in another tab. Switch from collection to file browser - the width of the pane increases. When I go into a directory the pane increases even more, sometimes it decreases a little, then increases, it's always in motion when you change directory or view. Change the width manually is possible but you always have to readjust the width on every directory change.

Even for a directory with a four letter name it switches to 50% of the window width (which is more than 10x the width of the folder name).
Comment 12 Ipeacocks 2011-03-09 22:02:42 UTC
i also confirm it. this bug is still present in 2.4.0
Comment 13 Myriam Schweingruber 2011-06-04 12:16:02 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 14 Philipp Schmidt 2011-06-04 15:44:00 UTC
Created attachment 60621 [details]
Navigationbar in Filebrowser changing the size of the left panel

Bug is still present in current git-version.
Comment 15 Myriam Schweingruber 2011-06-04 17:58:34 UTC
Thank you for the fast feedback :)
Comment 16 Matěj Laitl 2011-11-06 23:19:02 UTC
I used to suffer from this bug, but now I cannot reproduce it with current Amarok git. (would be Amarok 2.5 beta in a few days).

Please reopen if you happen to see this bug in 2.5 beta.
Comment 17 Matěj Laitl 2011-12-11 01:16:44 UTC
Hmm, now I hit this bug _again_. Reopening. It would be great if you others could test with 2.5 beta, current git or with 2.5 final once it is released.
Comment 18 Philipp Schmidt 2011-12-11 09:54:47 UTC
Jep, it's back again… Current Git.
Comment 19 Myriam Schweingruber 2012-06-24 16:31:53 UTC
Still valid. Since the Files Browser currently has no active maintainer help is welcome.
Comment 20 Matěj Laitl 2013-01-02 16:23:39 UTC
Git commit 9134490e54824f4c6090230d249c36ca284f1654 by Matěj Laitl.
Committed on 02/01/2013 at 17:19.
Pushed by laitl into branch 'master'.

BrowserBreadcrumbWidget, ElidingButton: fix lay-outing issues wrt minimumSize

BUGFIXES:
 * Fix Media Sources pane growing in size when navigating in it. (BR )
 * Fix Media Sources breadcrumb items sometimes appearing as new windows. (BR )
Related: bug 285712
FIXED-IN: 2.7

M  +2    -0    ChangeLog
M  +37   -31   src/browsers/BrowserBreadcrumbWidget.cpp
M  +21   -12   src/browsers/BrowserBreadcrumbWidget.h
M  +3    -3    src/widgets/ElidingButton.cpp

http://commits.kde.org/amarok/9134490e54824f4c6090230d249c36ca284f1654