BrowserBreadcrumbWidget, ElidingButton: fix lay-outing issues wrt minimumSize

BUGFIXES:
 * Fix Media Sources pane growing in size when navigating in it. (BR )
 * Fix Media Sources breadcrumb items sometimes appearing as new windows. (BR )

BUG: 246029
BUG: 285712
FIXED-IN: 2.7